--- a/internal/storage/const.env
+++ b/internal/storage/const.env
@@ -1,5 +1,5 @@
-SERVER=<localhost>
+SERVER=localhost
 SERVER_PORT=5432
-SERVER_USER=<postgres>
-SERVER_PASSWORD=<root>
-SERVER_DATABASE=<localhost>
+SERVER_USER=postgres
+SERVER_PASSWORD=root
+SERVER_DATABASE=localhost
