--- a/deployments/docker-compose.yaml
+++ b/deployments/docker-compose.yaml
@@ -1,5 +1,6 @@
 version: '3.7'
 
+# reading connection values from .env file using volumes field instead of  environment
 services:
   app:
     image: service-app
