--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-PGHOST=0.0.0.0
+PGHOST=postgres
 PGPORT=5432
 PGUSER=postgres
 PGPASSWORD=root
 PGDATABASE=postgres
 
-API_KEY=81feBaB6KYIYDv9mtcDcVzVLODBtkXxs
+API_KEY=EYpZi2BmrnyAI59RPIy6WalTceLj0Afv
 
 ADDR_HOST=0.0.0.0
 ADDR_PORT=9090
